# baseGeant4Project

./: CMakeLists.txt  main.cpp  run.mac  vis.mac
include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh
src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc
